src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

#root {
  --footer-height: 1rem;

  height: 100%;
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
}

body {
  height: 100%;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow: hidden;
  position: relative;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

.will-change {
  will-change: auto;
}

/* TEXT */
@font-face {
  font-family: 'NeueEinstellung';
  font-weight: 400;
  font-style: normal;
  font-display: auto;
  src:
    // local("NeueEinstellung-Regular"),
    url(./assets/fonts/NeueEinstellung-Regular.ttf) format('truetype'),
    url(./assets/fonts/NeueEinstellung-Regular.woff) format('woff'),
    url(./assets/fonts/NeueEinstellung-Regular.woff2) format('woff2');
}

@font-face {
  font-family: 'NeueEinstellung';
  font-weight: 500;
  font-style: normal;
  font-display: auto;
  src:
    // local("NeueEinstellung-Medium"),
    url(./assets/fonts/NeueEinstellung-Medium.ttf) format('truetype'),
    url(./assets/fonts/NeueEinstellung-Medium.woff) format('woff'),
    url(./assets/fonts/NeueEinstellung-Medium.woff2) format('woff2');
}

@font-face {
  font-family: 'NeueEinstellung';
  font-weight: 600;
  font-style: normal;
  font-display: auto;
  src:
    // local("NeueEinstellung-Semibold"),
    url(./assets/fonts/NeueEinstellung-Semibold.ttf) format('truetype'),
    url(./assets/fonts/NeueEinstellung-Semibold.woff) format('woff'),
    url(./assets/fonts/NeueEinstellung-Semibold.woff2) format('woff2');
}

@font-face {
  font-family: 'NeueEinstellung';
  font-weight: 700;
  font-style: normal;
  font-display: auto;
  src:
    // local("NeueEinstellung-Bold"),
    url(./assets/fonts/NeueEinstellung-Bold.ttf) format('truetype'),
    url(./assets/fonts/NeueEinstellung-Bold.woff) format('woff'),
    url(./assets/fonts/NeueEinstellung-Bold.woff2) format('woff2');
}

* {
  font-family: 'NeueEinstellung', sans-serif;
}

// .text-6xl {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 60px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.5;
//   letter-spacing: normal;
// }

// .text-5xl {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 48px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.5;
//   letter-spacing: normal;
// }

// .text-4xl {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 36px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.11;
//   letter-spacing: normal;
// }

// .text-3xl {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 30px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.2;
//   letter-spacing: normal;
// }

// .text-2xl {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 24px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.33;
//   letter-spacing: normal;
// }

// .text-xl {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 20px; // font-family: Gotham;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.4;
// }

// .text-lg {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 18px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.56;
//   letter-spacing: normal;
// }

// .text-base {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 16px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.5;
//   letter-spacing: normal;
// }

// .text-sm {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 14px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.43;
// }

// .text-xs {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 12px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.33;
// }

.text-supporting-2 {
  font-family: 'NeueEinstellung', sans-serif;
  font-size: 10px;
  font-stretch: normal;
  font-style: normal;
}

// .text-supporting-1 {
//   font-family: 'NeueEinstellung', sans-serif;
//   font-size: 8px;
//   font-stretch: normal;
//   font-style: normal;
//   line-height: 1.25;
// }

.ratio-auto {
  aspect-ratio: auto;
}

.ratio-square {
  aspect-ratio: 1 / 1;
}

.ratio-video {
  aspect-ratio: 16 / 9;
}

@layer components {
  html {
    margin: 0;
    padding: 0;
    height: 100%;
    overflow-x: hidden;

    @apply text-gray-100;
  }

  /* LINKS */
  a,
  .link {
    @apply text-primary underline hover:text-primary-dark;
  }

  a.secondary {
    @apply text-white;
  }

  /* DROPDOWNS */
  .dropdown-menu {
    border-radius: 8px;
    box-shadow: 0 2px 15px 0 rgba(179, 186, 197, 0.5);
    z-index: 100;

    @apply flex flex-col bg-white py-2;
  }

  .dropdown-item {
    min-width: 175px;
    max-width: 250px;

    @apply flex w-full items-center rounded-1px py-1 px-5 text-base text-neutral-900 no-underline hover:bg-neutral-20 hover:text-neutral-900 active:bg-neutral-30;

    img {
      height: 14px;
    }
  }

  .dropdown-item + .dropdown-item {
    @apply mt-2;
  }

  /* INPUTS */
  input[type='checkbox']:not(.base-checkbox) {
    @apply h-4 w-4 rounded border-2 border-neutral-500 text-xs text-neutral-500;
  }

  input:not([type]):not(.inxt-input),
  input[type='text']:not(.inxt-input),
  input[type='email']:not(.inxt-input),
  input[type='password']:not(.inxt-input) {
    @apply rounded-md px-3 py-2 text-base text-neutral-500 placeholder-neutral-60 ring-1 ring-neutral-100 focus:ring-blue-60;

    &:disabled {
      @apply bg-neutral-30;
    }

    &:focus {
      outline: none !important;
    }

    &.error {
      @apply border-l-8 border-pink bg-pink bg-opacity-10 ring-pink focus:ring-pink;
    }

    &.semi-dense {
      @apply px-2 py-0.5;
    }

    &.dense {
      @apply px-1 py-0;
    }

    &.right-icon {
      @apply pr-8;
    }

    &.no-ring {
      @apply ring-0 focus:ring-1 focus:ring-blue-60;
    }

    &.no-ring-at-all {
      @apply ring-0;
    }

    &.rect {
      @apply rounded-none;
    }
  }

  .input-number {
    @apply outline-none appearance-none border-neutral-60 text-center;

    -moz-appearance: textfield;
  }

  input[type='number']::-webkit-inner-spin-button,
  ::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  .inxt-input::placeholder {
    @apply font-normal;
  }

  /* BUTTONS */
  .base-button,
  button {
    &:disabled {
      cursor: not-allowed;
    }
  }

  .base-button.primary,
  .base-button.secondary,
  .base-button.cancel {
    height: 40px;

    @apply rounded-lg px-4 py-2 transition duration-200 ease-in-out;
  }

  button.primary,
  .base-button.primary {
    @apply bg-blue-60 text-white hover:bg-blue-80;

    &.inverse {
      @apply bg-blue-20 text-blue-60 hover:bg-blue-30;
    }

    &:disabled {
      @apply bg-neutral-30 text-neutral-80 hover:bg-neutral-30;
    }
  }

  button.secondary,
  .base-button.secondary {
    @apply bg-white text-blue-60 hover:bg-blue-60 hover:text-white;
  }

  button.dark,
  .base-button.dark {
    @apply bg-white text-neutral-500 hover:bg-neutral-500 hover:text-white;
  }

  button.tertiary,
  .base-button.tertiary {
    @apply text-gray-80 transition-colors duration-100 ease-in-out hover:bg-gray-5 active:bg-gray-10;

    &:disabled {
      @apply pointer-events-none text-gray-40;
    }

    &.squared {
      @apply h-10 w-10;
    }
  }

  button.cancel,
  .base-button.cancel {
    @apply bg-opacity-0 text-red-60;
  }

  .base-button.square {
    @apply box-content flex items-center justify-center px-2 py-0;
  }

  /* EVENTS */
  .pointer-events-none.descendants {
    * {
      pointer-events: none;
    }

    &.only {
      @apply pointer-events-auto;
    }
  }

  /* GRID */
  .square {
    aspect-ratio: 1;
  }

  /* DRAG AND DROP */
  .drag-over-effect {
    box-shadow: inset 0 0 0 0.15rem var(--color-blue-40);

    @apply rounded-6px bg-blue-50 bg-opacity-30;
  }
}

/* RECAPTCHA */
.grecaptcha-badge {
  visibility: hidden;
}

/* Abbr */
abbr[title] {
  text-decoration: none !important;
}

/* Infinite scroll */
.infinite-scroll-component {
  overflow: hidden !important;
}

/* Photos skeleton animation */
@keyframes shimmer {
  100% {
    transform: translateX(100%);
  }
}

